// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`speakHeader renders 0 1`] = `
Array [
  .c0 {
  speak-header: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders function 1`] = `
Array [
  .c0 {
  speak-header: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: has;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: has;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders invalid theme path 1`] = `
Array [
  .c0 {
  speak-header: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders negative number 1`] = `
Array [
  .c0 {
  speak-header: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  speak-header: July;
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speak-header: July;
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speak-header: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-header: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-header: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    speak-header: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    speak-header: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-header: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speak-header: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speak-header: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speak-header: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  speak-header: July;
}

@media May {
  .c0 {
    speak-header: August;
  }
}

@media April {
  .c0 {
    speak-header: September;
  }
}

@media January {
  .c0 {
    speak-header: November;
  }
}

@media April {
  .c0 {
    speak-header: August;
  }
}

@media June {
  .c0 {
    speak-header: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speak-header: July;
}

@media May {
  .c0 {
    speak-header: August;
  }
}

@media April {
  .c0 {
    speak-header: September;
  }
}

@media January {
  .c0 {
    speak-header: November;
  }
}

@media April {
  .c0 {
    speak-header: August;
  }
}

@media June {
  .c0 {
    speak-header: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speak-header: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-header: November;
  }
}

@media April {
  .c0 {
    speak-header: January;
  }
}

@media January {
  .c0 {
    speak-header: December;
  }
}

@media April {
  .c0 {
    speak-header: April;
  }
}

@media June {
  .c0 {
    speak-header: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-header: November;
  }
}

@media April {
  .c0 {
    speak-header: January;
  }
}

@media January {
  .c0 {
    speak-header: December;
  }
}

@media April {
  .c0 {
    speak-header: April;
  }
}

@media June {
  .c0 {
    speak-header: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    speak-header: July;
  }
}

@media April {
  .c0 {
    speak-header: August;
  }
}

@media January {
  .c0 {
    speak-header: September;
  }
}

@media April {
  .c0 {
    speak-header: November;
  }
}

@media June {
  .c0 {
    speak-header: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    speak-header: July;
  }
}

@media April {
  .c0 {
    speak-header: August;
  }
}

@media January {
  .c0 {
    speak-header: September;
  }
}

@media April {
  .c0 {
    speak-header: November;
  }
}

@media June {
  .c0 {
    speak-header: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-header: January;
  }
}

@media April {
  .c0 {
    speak-header: December;
  }
}

@media January {
  .c0 {
    speak-header: April;
  }
}

@media April {
  .c0 {
    speak-header: May;
  }
}

@media June {
  .c0 {
    speak-header: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speak-header: January;
  }
}

@media April {
  .c0 {
    speak-header: December;
  }
}

@media January {
  .c0 {
    speak-header: April;
  }
}

@media April {
  .c0 {
    speak-header: May;
  }
}

@media June {
  .c0 {
    speak-header: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders postitive number 1`] = `
Array [
  .c0 {
  speak-header: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders string 1`] = `
Array [
  .c0 {
  speak-header: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: July;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: June;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: June;
}

<div
    className="c0"
  />,
]
`;

exports[`speakHeader renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`speakHeader renders valid theme path 1`] = `
Array [
  .c0 {
  speak-header: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speak-header: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
